# pacman2

./: CMakeLists.txt  PACMAN GAME 2025.docx  POINTERFLAGS.txt  README.md  ignore_external.supp  valgrind.txt
.github/workflows/: cmake-single-platform.yml  logic_lib  release.yml
app/: CMakeLists.txt
app/include/: AssetManager.h  Camera.h  Game.h
app/include/factories/: ConcreteFactory.h
app/include/states/: GameOverState.h  GameState.h  MenuState.h  PausedState.h  State.h  StateManager.h  VictoryState.h
app/include/views/: AppleView.h  CoinView.h  EntityView.h  GhostView.h  LivesView.h  PacManView.h  ScoreView.h  WallView.h
app/src/: AssetManager.cpp  Camera.cpp  Game.cpp  main.cpp
app/src/factories/: ConcreteFactory.cpp
app/src/states/: GameOverState.cpp  GameState.cpp  MenuState.cpp  PausedState.cpp  StateManager.cpp  VictoryState.cpp
app/src/views/: AppleView.cpp  CoinView.cpp  EntityView.cpp  GhostView.cpp  LivesView.cpp  PacManView.cpp  ScoreView.cpp  WallView.cpp
assets/: map.txt
logic/: CMakeLists.txt
logic/include/: World.h
logic/include/logic/: Event.h  World.h
logic/include/logic/models/: AppleModel.h  CoinModel.h  EntityModel.h  GhostModel.h  PacManModel.h  ScoreModel.h  WallModel.h
logic/include/logic/patterns/: AbstractFactory.hpp  Observer.h  Subject.h  Visitor.h
logic/include/logic/strategies/: GhostStrategy.h
logic/include/logic/utils/: MapLoader.h  Random.h  StopWatch.h  TxtMapLoader.h  nouble.h  txtMapLoader.h
logic/src/: World.cpp
logic/src/models/: AppleModel.cpp  CoinModel.cpp  EntityModel.cpp  GhostModel.cpp  PacManModel.cpp  ScoreModel.cpp  WallModel.cpp
logic/src/utils/: MapLoader.cpp  Random.cpp  StopWatch.cpp  TxtMapLoader.cpp  txtMapLoader.cpp
